# pyrdfa3

./: .gitignore  Fluid-Attacks-Results1.csv  Fluid-Attacks-Scan.sh  README.md  _fascan.yml  generateDoc.sh  pyproject.toml  updatePYPI.sh  updateTestPYPI.sh
.github/workflows/: docs.yml  pdoc.yml
doc/: index.html  pyRdfa.html  pyRdfaExtras.html  search.js
doc/pyRdfa/: embeddedRDF.html  extras.html  host.html  initialcontext.html  options.html  parse.html  property.html  rdflibparsers.html  rdfs.html  state.html  termorcurie.html  transform.html  utils.html
doc/pyRdfa/extras/: httpheader.html
doc/pyRdfa/host/: atom.html  html5.html
doc/pyRdfa/rdfs/: cache.html  process.html
doc/pyRdfa/transform/: DublinCore.html  OpenID.html  lite.html  metaname.html  prototype.html
doc/pyRdfaExtras/: serializers.html
doc/pyRdfaExtras/serializers/: XMLWriter.html  jsonserializer.html  prettyXMLserializer.html  prettyXMLserializer_3.html  prettyXMLserializer_3_2.html  turtleserializer.html
pyRdfa/: __init__.py  options.py  utils.py
pyRdfa/rdfs/: cache.py
src/pyRdfa/: __init__.py  options.py  utils.py
src/pyRdfa/rdfs/: cache.py
src/pyRdfa3.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
src/pyRdfaExtras/: __init__.py
src/pyRdfaExtras/serializers/: jsonserializer.py  prettyXMLserializer.py  prettyXMLserializer_3_2.py  turtleserializer.py
