[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "pyRdfa3"
version = "3.6.0"
authors = [
  { name="Ivan Herman & prrvchr", email="prrvchr@gmail.com" },
]
description = "pyRdfa distiller/parser library"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
  "rdflib>=7.0.0",
]

[project.urls]
Homepage = "https://prrvchr.github.io/pyrdfa3/"
Issues = "https://github.com/prrvchr/pyrdfa3/issues"